--- a/readme.mdx
+++ b/readme.mdx
@@ -28,9 +28,9 @@ This tutorial shows how to build an ETL (Extract, Load, Transform) pipeline. You
 
 - A Scaleway account logged into the [console](https://console.scaleway.com)
 - [Owner](/iam/concepts/#owner) status or [IAM permissions](/iam/concepts/#permission) allowing you to perform actions
-- A [Scaleway Kapsule cluster](/kubernetes/how-to/create-cluster/) with Airflow installed
-- A [Managed PostgreSQL instance](/managed-databases-for-postgresql-and-mysql/quickstart/)
-- A [Managed ClickHouse instance](/managed-databases-for-clickhouse/quickstart/)
+- A [Scaleway Kapsule cluster](https://www.scaleway.com/en/docs/kubernetes/quickstart/) with Airflow installed
+- A [Managed PostgreSQL instance](https://www.scaleway.com/en/docs/managed-databases-for-postgresql-and-mysql/quickstart/)
+- A [Managed ClickHouse instance](https://www.scaleway.com/en/docs/data-warehouse/quickstart/)
 - `kubectl` configured to point to your Kapsule cluster
 
 ## Setting up secure connections
